--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/xuannga/Meal-Planner#readme",
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.6.5"
   }
 }
